# tutorials

./: .gitignore  README.en.md  README.md  README_vi.md  ac_mode_and_fan_control_full_llm.yaml  advanced_google_search_full_llm.yaml  advanced_youtube_search_full_llm.yaml  calendar_events_lookup_full_llm.yaml  camera_snapshot_full_llm.yaml  check_the_device_turns_on_manually.yaml  control_music_full_llm.yaml  create_calendar_event_full_llm.yaml  create_lunar_events.yaml  date_lookup_and_conversion_full_llm.yaml  device_control_timer_full_llm.yaml  device_control_tool.yaml  device_location_lookup_full_llm.yaml  device_ringing_full_llm.yaml  devices_schedules.yaml  devices_schedules_controller_full_llm.yaml  devices_schedules_restart_handler.yaml  fan_oscillation_control_full_llm.yaml  fan_speed_and_oscillation_control_full_llm.yaml  fan_speed_control_full_llm.yaml  file_content_analyzer_full_llm.yaml  get_youtube_video_info_full_llm.yaml  home_assistant_device_location_lookup_guide_vi.md  home_assistant_ios_themes_vi.md  home_assistant_play_favorite_youtube_channel_videos_en.md  home_assistant_play_favorite_youtube_channel_videos_vi.md  home_assistant_unavailable_devices_vi.md  home_assistant_voice_instructions_en.md  home_assistant_voice_instructions_vi.md  link_multiple_devices.yaml  memory_tool_full_llm.yaml  memory_tool_local.yaml  play_youtube_video_full_llm.yaml  pyproject.toml  send_to_telegram_full_llm.yaml  send_to_zalo_bot_full_llm.yaml  (+7 more)
.github/workflows/: update_source_url.yaml
scripts/: common_utilities.py  date_conversion_tool.py  memory.py  requirements.txt  telegram_bot_handle_tool.py  traffic_fine_lookup_tool.py  youtube_data_tool.py  zalo_bot_handle_tool.py  zalo_custom_bot_handle_tool.py
