[project]
name = "tutorials"
version = "1.0.0"
description = "Home Assistant Blueprints & Tutorials"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "curl-cffi",
    "google-api-python-client",
    "homeassistant",
    "orjson",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]
ignore = [
    "E501", # line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
